--- a/app/src/main/res/layout/layout_photo.xml
+++ b/app/src/main/res/layout/layout_photo.xml
@@ -15,7 +15,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/space_normal"
         app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="@dimen/radius_card">
+        app:cardCornerRadius="@dimen/radius_card"
+        app:cardElevation="12dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -24,7 +25,7 @@
             <ImageView
                 android:id="@+id/iv_image"
                 android:layout_width="0dp"
-                android:layout_height="120dp"
+                android:layout_height="160dp"
                 android:contentDescription="@string/content_image"
                 android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -66,6 +67,7 @@
                 android:text="@{item.name}"
                 android:textColor="@color/black"
                 android:textSize="@dimen/font_normal"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
                 app:layout_constraintStart_toEndOf="@+id/iv_profile"
                 app:layout_constraintTop_toTopOf="@+id/iv_profile"
